--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.15.2",
     "mysql": "^2.13.0",
     "request": "^2.81.0",
-    "socket.io": "^1.7.3"
+    "skyrtc": "0.0.2",
+    "socket.io": "^1.7.3",
+    "underscore": "^1.8.3"
   }
 }
