--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "co": "^4.6.0",
+    "crypto": "0.0.3",
     "express": "^4.15.2",
     "mysql": "^2.13.0",
     "request": "^2.81.0",
