--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "co": "^4.6.0",
     "crypto": "0.0.3",
     "express": "^4.15.2",
+    "https": "^1.0.0",
     "mysql": "^2.13.0",
     "nodemailer": "^4.0.1",
     "request": "^2.81.0",
